@@ -1,5 +1,14 @@
 2007-05-08  Roman Kennke  <roman@kennke.org>
 
+	* gnu/java/awt/font/FontDelegate.java
+	(getGlyphIndex): New method. Maps characters to their
+	glyph index in the font.
+	M gnu/java/awt/font/opentype/OpenTypeFont.java
+	(getGlyphIndex): New method. Maps characters to their
+	glyph index in the font.
+
+2007-05-08  Roman Kennke  <roman@kennke.org>
+
 	* gnu/java/awt/java2d/AbstractGraphics2D.java
 	(AA_SAMPLING): Removed.
 	(alpha): Removed field.
